add links in case iframe is too slow

--- a/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
+++ b/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
@@ -79,6 +79,16 @@
 					Presentation online at: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html#/">small.cat/dad</a></span></div>
 				</section>
 
+				<section>
+
+					&#11118;
+					<br/>
+					Attention!
+					<br/>
+					<p style="font-size: 0.5em">
+					It takes around 5 minutes to load all the pages inside this presentation.<br/>If you don't want to wait, some blank page will be displayed,<br/>but you can use the links indicated before it.</p>
+				</section>
+
 
 
 				<!--
@@ -327,6 +337,20 @@
  					<div class="back"><a href="http://elec.enc.sorbonne.fr/">Edition Visualization Technology</a> (EVT)</div>
  				</section>
 
+ 				<section>
+ 					Exemples d'utilisation de EVT
+ 					<p>
+ 						<a href="http://pelavicino.labcd.unipi.it/">Codice Pelavicino</a><br/>
+ 						<a href="http://pelavicino.labcd.unipi.it/evt/">EVT dans Codice Pelavicino</a><br/>
+ 						<br/>
+ 						<a href="https://tarsian.vital-it.ch/about/#page-top">Tarsian project</a><br/>
+ 						<a href="http://tarsian.vital-it.ch/">EVT dans Tarsian project</a><br/>
+ 						<br/>
+ 						<a href="https://lib.trinity.edu/lament/index.html">EVT dans Saint Anselm, Trinity University Library, Mexico. Undergraduate students project</a><br/>
+ 						<br/>
+ 					</p>
+ 				</section>
+
  				<section data-background-iframe="http://pelavicino.labcd.unipi.it/" data-background-interactive></section>
  				<section data-background-iframe="http://pelavicino.labcd.unipi.it/evt/" data-background-interactive></section>
 
@@ -339,7 +363,21 @@
 					<h3>Forme. Dépasser le paradigme de la page et du livre</h3>
 					<div class="quote">The digital edition is guided by a different paradigm. If the paradigm of an edition is <b>limited</b> to the <b>two dimensional space of the ‘page’</b> and to <b>typographic means of information representation</b>, than it’s not a digital edition.</div>
 					<div class="source">Sahle 2008, Online</div>
-				</section>  
+				</section>
+
+				<section>
+ 					Dépasser le paradigme de la page, quelques exemples
+ 					<p>
+ 						<a href="http://estoria.bham.ac.uk/edition/">Estoria de Espanna Digital</a><br/>
+ 						<a href="http://wjc.bodleian.ox.ac.uk/HTML/WJC.html">The Wandr'ring Jew's Chronicle</a><br/>
+ 						<a href="http://xanadu.com/xanademos/MoeJusteOrigins.html">Xanadu, by Ted Nelson (<i>ce n'est pas une édition </i>!)</a><br/>
+ 						<a href="http://alcidedigitale.fbk.eu/">Alcide Digitale</a><br/>
+ 						<a href="http://www.lokalbericht.ch/dossier">Lokalbericht</a><br/>
+ 						<a href="http://www.lokalbericht.ch/dossier">Fontanes Handbibliothek</a><br/>
+ 						<a href="http://www.lokalbericht.ch/dossier">Atlante Calvino</a><br/>
+ 						<br/>
+ 					</p>
+ 				</section>  
 
 				<section data-background-iframe="http://estoria.bham.ac.uk/edition/" data-background-interactive></section>
 				<section data-background-iframe="http://wjc.bodleian.ox.ac.uk/HTML/WJC.html#" data-background-interactive></section>
@@ -358,6 +396,13 @@
 						<div class="source">Sahle 2013</div>
 				</section>
 
+				<section>
+					Exemples. Attention au code linguistique
+					<a href="http://ps.clul.ul.pt/index.php?action=home">Project P.S. Post Scriptum</a><br/>
+ 					<a href="http://txm.bfm-corpus.org/?command=documentation&path=/GRAAL">Queste del Saint Graal</a><br/>
+ 						
+				</section>
+
 				<section data-background-iframe="http://ps.clul.ul.pt/index.php?action=home" data-background-interactive></section>
 				<section data-background-iframe="http://txm.bfm-corpus.org/?command=documentation&path=/GRAAL" data-background-interactive></section>
 
@@ -370,6 +415,15 @@
 				<section>
 					<div class="quote">We should make it as <b>easy</b> as we can for others to <b>take</b> what we have made, to <b>adapt</b> it and <b>augment</b> it in any way they wish, and then <b>republish</b> it. [...] We all know the topos that we are standing on the shoulders of the scholars who have preceded us. The digital age offers a variant on this. As well as stand on the shoulders of others, we should help others to stand on our shoulders. This will change who we are. Now, that would be revolutionary.</div>
 					<div class="source">Robinson 2016: 199</div>
+				</section>
+
+				<section>
+					Exemples. Éditions qui mettent à disposition toutes les données
+					<a href="https://sturm-edition.de/">Der Sturm</a><br/>
+ 					<a href="http://www.nietzschesource.org">Nietzsche Source</a><br/>
+ 					<a href="https://www.ub.unibas.ch/bernoulli/index.php/Hauptseite">Die Briefwechsel der Mathematiker Bernoulli</a><br/>
+ 					<a href="http://orosius.monumenta.ch/">Die Glossen Ekkeharts IV. im Codex Sangallensis 621</a><br/>
+ 						
 				</section>
 
 				<section data-background-iframe="https://sturm-edition.de/" data-background-interactive></section>
