--- a/talks/20191024_masterHistoireLivre/20191024_masterHistoireLivre.html
+++ b/talks/20191024_masterHistoireLivre/20191024_masterHistoireLivre.html
@@ -46,7 +46,7 @@
 <!-- ==================================================================================================  -->
 <!-- ==================================================================================================  -->
 <!--                                                                                                     -->
-<!-- Attenzione, i materiali per questa presentazione sono inside Talks/jupyter notebook e in Talks/materials -->
+<!-- Attenzione, i materiali per questa presentazione sono in Talks/materials -->
 <!--                                                                                                     -->
 <!-- ==================================================================================================  -->
 <!-- ==================================================================================================  -->
@@ -71,38 +71,15 @@
 					Table des matières
 					<br/><br/>
 					<ol>
+						<li>Collation automatique</li>
+						<li>Modélisation</li>
 						<li>Encodage <span style="color:grey">[XML/TEI]</span></li>
-						<li>Comparaison <span style="color:grey">[algorithmes d'alignement]</span></li>
 						<li>Réseaux génétiques <span style="color:grey">[OWL/RDF]</span></li>
-					</ul>
-				</section>
-
-
-				<section>
-					1. Encodage XML/TEI
-					<br/><br/>
-					<img style="border: none" src="images/focus1.png"/>
-				</section>
-
-				<section data-background-image="images/requiem_dactylo.png" data-background-size="60%"/>
+					</ol>
 				</section>
 
 				<section>
-					XML
-					<br/>TEI (Text Encoding Initiative)
-
-				</section>
-
-				<section>
-					<img src="images/requiem_xml.png">
-				</section>
-
-				<section data-background-iframe="../materials/20181025UNIL_master_genetique/XMLstages.html" data-background-interactive>
-				</section>
-
-
-				<section>
-					2. Collation automatique
+					1. Collation automatique
 					<br/><br/>
 					<img style="border: none" src="images/focus2.png"/>
 				</section>
@@ -126,7 +103,43 @@
 				</section>
 
 				<section>
-					3. Réseaux génétiquex
+					2. Modélisation
+					<br/><br/>
+					<img style="border: none" src="images/shapeData.jpeg" width="20%" />
+				</section>
+
+				<section>
+					Un document d'archive ? Par exemple, MS 1 H1/6d
+					<img width="40%" src="images/requiem_dactylo.png">
+				</section>
+
+
+				<section>
+					3. Encodage XML/TEI
+					<br/><br/>
+					<img style="border: none" src="images/focus1.png"/>
+				</section>
+
+				<section data-background-image="images/requiem_dactylo.png" data-background-size="60%"/>
+				</section>
+
+				<section>
+					XML
+					<br/>TEI (Text Encoding Initiative)
+
+				</section>
+
+				<section>
+					<img src="images/requiem_xml.png">
+				</section>
+
+				<section data-background-iframe="../materials/20181025UNIL_master_genetique/XMLstages.html" data-background-interactive>
+				</section>
+
+
+				
+				<section>
+					4. Réseaux génétiquex
 					<br/><br/>
 					<img style="border: none" src="images/focus3.png"/>
 				</section>
@@ -162,7 +175,7 @@
 				-->
 
 				<section>
-					<h3></h3>
+					<h3><a href="https://gen-o.github.io/" target="_blank">GENO</a></h3>
 				</section>
 
 
@@ -178,7 +191,7 @@
 
 				<section>
 					
-					<div style="font-size: 0.65em;text-align: left">
+					<div style="font-size: 0.5em;text-align: left">
 						<b>Editions du Journal de Roud :</b>
 						<ul>
 							<li>Roud, Gustave, <i>Journal</i>, éd. Philippe Jaccottet, Vevey, Bertil Galland, 1982.</li>
@@ -188,6 +201,7 @@
 						<b>Critique génétique, journal et genèse post-éditoriale :</b>
 						<ul>
 							<li>Biasi, Pierre-Marc de, <i>Génétique des textes</i>, Paris, CNRS, « Biblis », 2011.</li>
+							<li>Christen, Alessio et Elena Spadini, « Modelling the writing process. Gustave Roud, from the diary to the work, from the document to the networks », <i>Umanistica digitale</i> (à paraître)</li>
 							<li>Lejeune, Philippe, « Le journal : genèse d’une pratique », <i>Genesis</i> [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/310">journals.openedition.org/genesis/310</a></li>
 							<li>Mahrer, Rudolf, « La plume après le plomb », <i>Genesis</i> [En ligne], 44 | 2017. <a href="http://journals.openedition.org/genesis/1731">journals.openedition.org/genesis/1731</a></li>
 							<li>Simonet-Tenant, Françoise, « Le journal personnel comme pièce du dossier génétique », Genesis [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/425">journals.openedition.org/genesis/425</a></li>
@@ -195,10 +209,11 @@
 
 						<b>Éditions numériques et génétiques :</b>
 						<ul>
-							<li>TEI - Text Encoding Initiative <a href="http://tei-c.org/">tei-c.org/</a></li>
+							<li>TEI - Text Encoding Initiative <a href="http://tei-c.org/">http://tei-c.org/</a></li>
 							<li>CollateX <a href="http://collatex.net/">collatex.net/</a></li>
 							<li>Catalogue of Digital Editions <a href="https://dig-ed-cat.acdh.oeaw.ac.at/">dig-ed-cat.acdh.oeaw.ac.at/</a></li>
 							<li>a catalog of Digital Scholarly Editions <a href="http://www.digitale-edition.de/">www.digitale-edition.de/</a></li>
+							<li>Flanders, Julia, and Fotis Jannidis, eds. 2018. <i>The Shape of Data in Digital Humanities. Modeling Texts and Text-Based Resources</i>. Routledge.</li>
 						</ul>
 					</div>
 
