--- a/talks/20191024_masterHistoireLivre/20191024_masterHistoireLivre.html
+++ b/talks/20191024_masterHistoireLivre/20191024_masterHistoireLivre.html
@@ -109,6 +109,10 @@
 				</section>
 
 				<section>
+					prototype
+				</section>
+
+				<section>
 					Un document d'archive ? Par exemple, MS 1 H1/6d
 					<img width="40%" src="images/requiem_dactylo.png">
 				</section>
@@ -178,16 +182,6 @@
 					<h3><a href="https://gen-o.github.io/" target="_blank">GENO</a></h3>
 				</section>
 
-
-				<section>
-					Table des matières
-					<br/><br/>
-					<ol>
-						<li>Encodage <span style="color:grey">[XML/TEI]</span></li>
-						<li>Comparaison <span style="color:grey">[algorithmes d'alignement]</span></li>
-						<li>Réseau <span style="color:grey">[OWL/RDF]</span></li>
-					</ul>
-				</section>
 
 				<section>
 					
