--- a/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
+++ b/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html
@@ -76,7 +76,7 @@
 					<br/>
 					Elena Spadini (Université de Lausanne)
 					<br/>
-					Presentation online at: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html#/">small.cat/dad</a></span></div>
+					Presentation online at: <span style="text-decoration: underline; text-decoration-color: grey"><a href="https://elespdn.github.io/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html#/">elespdn.github.io/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html#/</a></span></div>
 				</section>
 
 				<section>
