--- a/io/index.html
+++ b/io/index.html
@@ -109,6 +109,12 @@
                 <ul style="list-style-type:none">
                 	<li>
                         <div>
+                            <p><span class="slidetitle">L'édition scientifique numérique. Modèles et perspectives de recherche</span>. Lausanne, 22 Octobre 2019 - <a href="https://www.unil.ch/fdi/home.html" target="_blanche">Formation doctorale interdisciplinaire</a>. 
+                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20191022_FDI_Lausanne/20191022_FDI_Lausanne.html#/" target="_blanche" role="button">View slides →</a></p>
+                        </div>
+                    </li>
+                    <li>
+                        <div>
                             <p>Avec Alessio Christen, <span class="slidetitle">Modelling the writing process</span>. Cracow, 12 June 2019 - <a href="http://genesis2019.confer.uj.edu.pl/" target="_blanche">Genesis</a>. 
                             <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20190612_Krakow/20190612_Krakow.html#/" target="_blanche" role="button">View slides →</a></p>
                         </div>
@@ -277,6 +283,9 @@
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Teaching</b></h2>
                 <ul style="list-style-type: none">
 
+                    <li>
+                        <p><span class="teachingtitle">Le volet numérique du projet « Gustave Roud. <em>Œuvres complètes</em> »</span>. 2019 octobre, Université de Lausanne - Master Histoire du livre et édition critique des textes, séminaire de Daniel Maggetti. <a class="btn btn-outline-secondary" href="https://gustaveroudproject.github.io/talks/20191024_masterHistoireLivre/20191024_masterHistoireLivre.html#/" target="_blank" role="button">Slides</a></p></li>
+
                 	<li>
                         <p><span class="teachingtitle">Textes et éditions numériques</span>. Programme doctoral en études numériques. Université de Lausanne, 25-26 avril 2019. <a class="btn btn-outline-secondary" href="https://www.unil.ch/doc-digitalstudies/home/menuinst/activites-du-programme/textes-et-editions-numeriques.html" target="_blank" role="button">Présentation</a><a class="btn btn-outline-secondary" href="https://github.com/gabays/UniL_DigitalTexts_2019" target="_blank" role="button">Programme et matériaux</a></p></li>
 
@@ -314,9 +323,11 @@
                 <h2><a style="" href="index.html">&#11180;</a>&nbsp;&nbsp;<b>Community</b></h2>
                 <ul style="list-style-type:none">
                    <li>
-                        <p>European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) Executive Committee member (2017-2020).</p></li>
+                        <p>Scientific committee member. Digital Humanities 2020, <em>Carrefours / Intersections</em>, Ottawa, 20-25 July 2020.</p></li>
                    <li>
-                        <p>Workshop on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies (<a href="https://wp.unil.ch/graphsde/" target="_blank">#graphSDE2019</a>), Lausanne 3-4 June 2019. Co-chair.</p></li>
+                        <p>European Association for Digital Humanities (<a href="http://eadh.org/">EADH</a>) Executive Committee elected member (2017-2020).</p></li>
+                   <li>
+                        <p>Co-chair. Workshop on Scholarly Digital Editions, Graph Data-Models and Semantic Web Technologies (<a href="https://wp.unil.ch/graphsde/" target="_blank">#graphSDE2019</a>), Lausanne, 3-4 June 2019</p></li>
                     <li>
                         <p>Program committee member. <i><a href="http://wp.unil.ch/llist/event/comhum2018/" target="_blank">Workshop on Computational Methods in the Humanities 2018 (COMHUM 2018)</a></i>. Lausanne, 4-5 juin 2018.
                     <li>
