--- a/talks/20210505_EnC_Ademec/2021_EnC_Ademec.html
+++ b/talks/20210505_EnC_Ademec/2021_EnC_Ademec.html
@@ -135,7 +135,9 @@
 					<img src="img/eadh.png"></img>
 				</section>
 
-				<section data-background-image="img/einaudi.JPG" data-background-size="contain">
+				<section>
+					<img src="img/einaudi.JPG" width="40%"></img>
+					<img src="img/einaudi2.JPG" width="40%"></img>
 				</section>
 
 
