--- a/talks/20210505_EnC_Ademec/2021_EnC_Ademec.html
+++ b/talks/20210505_EnC_Ademec/2021_EnC_Ademec.html
@@ -65,8 +65,8 @@
 					<p>Après : humanités numériques</p>
 				</section>
 
-				<section data-background-iframe="img/timeline.html"
-				          data-background-interactive>
+				<section>
+					<iframe src="img/timeline.html" width="120%" height="300px"></iframe>
 				</section>
 
 				<section data-background-image="img/1430_4v.jpeg" data-background-size="contain">
