--- a/talks/20210601_Fondamentaux_SDE/20210601_Fondamentaux_SDE.html
+++ b/talks/20210601_Fondamentaux_SDE/20210601_Fondamentaux_SDE.html
@@ -119,7 +119,7 @@
  				</section>
 
  				<section>
-					<h3>Édition scientifique</h3>
+					<h3>Édition critique</h3>
 					<p><i>Scholarly edition</i></p>
 					<br/>
 					<div><p>Une édition critique a pour but d'établir un texte fiable, en suivant des principes explicites. Elle rend compte de la transmission d'une œuvre et/ou de sa genèse, et des circonstances de sa rédaction. L'édition critique est généralement commentée grâce à des notes, des introductions, etc.</p></div>
@@ -288,7 +288,6 @@
 
 				<section data-markdown>
 					<textarea data-template>
-						### OCR/HTR ou transcription
 						<div class="left">
 							<br/>
 
@@ -484,7 +483,7 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 
 					Which features are you going to markup and why
 
-					Risposta a domande di ricerca
+					Questions de recherches --> choix interpretatives --> explicites grâce à l'encodage
 				</textarea>
 				</section>
 
@@ -512,7 +511,7 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 								</ul>
 								<br/>
 							</li>
-							<li><b>machines</b> (faire des requêtes, extraire, reutiliser, citer)
+							<li><b>machines</b> (faire des requêtes, extraire, citer)
 								<ul style="list-style: none">
 									<li>- APIs</li>
 									<li>- query endpoints (SQL, SPARQL, XPath, XQuery, Cypher, etc.)</li>
@@ -555,7 +554,7 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 
 				<section data-markdown>
 					<textarea data-template>
-						### Reutilisation des données (XML-TEI) 
+						### Extraire les données (XML-TEI) 
 						 
 						 <div class="left"><br/>
 						
