--- a/io/index.html
+++ b/io/index.html
@@ -79,7 +79,7 @@
 
         	<div class="news">
           		<div style="font-size: 3em;text-align: center;">&#128364;</div>
-          		<br/>Call for reviews open! Contributions are welcome for <a href="https://ride.i-d-e.de/reviewers/call-for-reviews/tools-and-environments-for-digital-scholarly-editing/"><i>Tools and Environments for Digital Scholarly Editing</i></a>, new issues of <a href="https://ride.i-d-e.de/">RIDE</a>.
+          		<br/>Call for reviews open! Contributions are welcome for <a href="https://ride.i-d-e.de/reviewers/call-for-reviews/tools-and-environments-for-digital-scholarly-editing/"><i>Tools and Environments for Digital Scholarly Editing</i></a>, a series of special issues of <a href="https://ride.i-d-e.de/">RIDE</a>.
             </div>
 
 
