--- a/talks/20220401_editions_crashCourse/index.html
+++ b/talks/20220401_editions_crashCourse/index.html
@@ -76,7 +76,6 @@
 						Elena Spadini
 						<br/>
 						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a>
-						</div>
 					</div>
 				</section>
 
@@ -119,14 +118,7 @@
  				<section>
 					<h3>Scholarly edition</h3>
 					<br/>
-					<div><p>Une édition critique a pour but d'établir un texte fiable, en suivant des principes explicites. Elle rend compte de la transmission d'une œuvre et/ou de sa genèse, et des circonstances de sa rédaction. L'édition critique est généralement commentée grâce à des notes, des introductions, etc.</p></div>
-				</section>
-
-				<section>
-					<h3>Édition scientifique num&#233;rique</h3>
-					<p><i>Scholarly Digital Edition</i></p>
-					<br/> 
-					<p>Une &#233;dition num&#233;rique ne peut pas être convertie dans une &#233;dition papier sans une perte substantielle de contenu ou de fonctionnalit&#233;</p>
+					<div><p>A scholarly edition aims to establish a reliable text, following explicit principles. It gives an account of the circumstances of the creation of the work and of its transmission and/or its genesis, and. A scholarly edition usually offers notes, introductions, and other materials to provide relevant information for the reader.</p></div>
 				</section>
 
 				<section id="digital">
@@ -150,7 +142,7 @@
 				<section >
 					<p>A digital edition can not be printed without a loss of information and/or functionality</p>
 					<br/>					
-					<p style="font-size: 0.5em">"Eine digitale Edition ist dadurch bestimmt, dass sie nicht ohne wesentliche Informations- und Funktionsverluste in eine typografi sche Form gebracht werden kann – und in diesem Sinne über die druckbare Edition hinausgeht."</p>
+					<p style="font-size: 0.5em">"Eine digitale Edition ist dadurch bestimmt, dass sie nicht ohne wesentliche Informations- und Funktionsverluste in eine typografische Form gebracht werden kann – und in diesem Sinne über die druckbare Edition hinausgeht."</p>
 					<p style="font-size: 0.5em">(Sahle 2016/2: 149)</p>  
 				</section>   
 
