--- a/talks/20220401_editions_crashCourse/index.html
+++ b/talks/20220401_editions_crashCourse/index.html
@@ -69,7 +69,6 @@
 				<section>
 					<h3><b>Digital Scholarly Editions and TEI</b></h3>
 					<h4>RISE Crash course</h4>
-					<br/><br/>
 					<div class="small" style="text-align: left">
 						<br/>1.04.2022, Unibas
 						<br/><br/>
@@ -78,7 +77,7 @@
 						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a>
 					</div>
 					<br/>
-					<img width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
+					<img style="border:0px" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
 				</section>
 
 				
@@ -185,9 +184,8 @@
 				<! - #############################################################################################################################
 	##################################################################################################################################
 	###################################################### 2. Pipeline ###############################################################
-	##################################################################################################################################
-	##################################################################################################################################
-	################################################################################################################################ ->
+	#############################################
+	<li>manage the sources digital facsimiles</li>################################################################################### ->
 
  				<section data-background-color="#b2ebf2">
  					<h3 style="color:black">2.<br/>A digital workflow :<br/>produce the edition</h3>
@@ -201,7 +199,6 @@
 								<td style="font-size: 0.8em" width="70%">
 									<ul>
 										<li>collect and describe sources</li>
-										<li>manage the sources digital facsimiles</li>
 										<li>OCR/HTR or transcription</li>
 										<li>encoding and annotation</li>
 										<li>collation and stemmatics</li>
