--- a/talks/20220401_editions_crashCourse/index.html
+++ b/talks/20220401_editions_crashCourse/index.html
@@ -76,7 +76,7 @@
 						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a>
 					</div>
 					<br/>
-					<img style="border:0px;box-shadow: 0;" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
+					<img style="border:0px;box-shadow: none;" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
 				</section>
 
 				
