--- a/talks/20220401_editions_crashCourse/index.html
+++ b/talks/20220401_editions_crashCourse/index.html
@@ -71,9 +71,10 @@
 					<div class="small" style="text-align: left">
 						<br/>1.04.2022, RISE Crash course
 						<br/><br/>
+						<div class="smaller">
 						Elena Spadini
 						<br/>
-						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a></div>
 					</div>
 					<br/>
 					<img style="border:0px;box-shadow: none;" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
@@ -188,6 +189,21 @@
  					<h3 style="color:black">2.<br/>Digital workflows</h3>
  				</section>
 
+				 <!--
+				<section>
+					There are tools and standards for almost each of the following steps. Here we'll focus on the result of each step.
+
+					<ol>
+						<li>Define where to go (scientific goals and deliverables)</li>
+						<li>Find a way to arrive there (TEI, editing tools, ...)</li>
+					</ol>
+				</section>
+				-->
+
+				<section data-background-image="images/countryLane.jpg">
+
+		
+
 				<section>
 						<table>
 							<tr>
@@ -211,20 +227,7 @@
 				</section>
 
 
-				<!--
-				<section>
-					There are tools and standards for almost each of the following steps. Here we'll focus on the result of each step.
-
-					<ol>
-						<li>Define where to go (scientific goals and deliverables)</li>
-						<li>Find a way to arrive there (TEI, editing tools, ...)</li>
-					</ol>
-				</section>
-				-->
-
-				<section data-background-image="images/countryLane.jpg">
-
-				</section>
+						</section>
 
 
 				<section data-markdown>
@@ -476,15 +479,15 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 				</textarea>
 				</section>
 
-				<section data-background-image="images/beckett-3"></section>
-				<section data-background-image="images/beckett-4"></section>
-				<section data-background-image="images/beckett-5"></section>
-				<section data-background-image="images/beckett-6"></section>
+				<section data-background-image="images/beckett-3.png" data-background-size="contain"></section>
+				<section data-background-image="images/beckett-4.png" data-background-size="contain"></section>
+				<section data-background-image="images/beckett-5.png" data-background-size="contain"></section>
+				<section data-background-image="images/beckett-6.png" data-background-size="contain"></section>
 
-				<section data-background-image="images/travizDeCivitateDei.jpeg"></section>
+				<section data-background-image="images/travizDeCivitateDei.jpeg" data-background-size="contain"></section>
 
-				<section data-background-image="images/lera.png"></section>
-				<section data-background-image="images/varianceViewer.png"></section>
+				<section data-background-image="images/lera.png" data-background-size="contain"></section>
+				<section data-background-image="images/varianceViewer.png" data-background-size="contain"></section>
 
 
 					<section>
@@ -511,9 +514,9 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 
 
 				<section>
-					Critical text. Example: <i><a href="http://faustedition.net/">FaustEdition</a></i>.
-					<br/>
-					No critical text. Example: <i><a href="">Commedia</a></i>
+					Critical text. Example: <i><a href="http://faustedition.net/">FaustEdition</a></i>
+					<br/><br/>
+					No critical text. Example: <i><a href="https://www.dantecommedia.it/">Commedia</a></i>
 				</section>
 
 
@@ -533,8 +536,7 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 
 						<div class="smaller">Paola Italia, "Testi come beni comuni: per una filologia digitale sostenibile", <em><br/>Intersections. New perspectives for public humanities</em>, 2020.</div>
 
-						<div class="small">T
-							The reader cannot have the task of establishing the text. It would be as if the citizens analyze the documents of a trial instead of the judge.</div>
+						<div class="small">The reader cannot have the task of establishing the text. It would be as if the citizens analyze the documents of a trial instead of the judge.</div>
 						
 					</textarea>
 				</section>
