--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -579,27 +579,10 @@ ex. : <em>"[Lo Stufaiuolo](https://scholarlyediting.org/2015/editions/intro.stuf
 				</section>
 
 
-<section>
-						<table>
-							<tr>
-								<td style="font-size: 0.8em" width="70%">
-									<ul>
-										<li>collection and description of the sources</li>
-										<li>OCR/HTR or transcription</li>
-										<li>encoding and annotation</li>
-										<li>collation and stemmatics</li>
-										<li>establishing a critical text</b></li>
-										<li>data visualization</b></li>
-										<li><b>publication</b></li>
-										<li>...</li>
-									</ul>
-								</td>
-								<td>
-									<img src="images/pipeline.png">
-								</td>
-							</tr>
-						</table>
+				<section>
+					roud viz
 				</section>
+
 				
 				
 				<!--
