--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -67,14 +67,14 @@
 							
 				
 				<section>
-					<h3><b>Digital Scholarly Editions and TEI</b></h3>
+					<h3><b>Introduction to Digital Scholarly Editions</b></h3>
 					<div class="small" style="text-align: left">
 						<br/>1.04.2022, RISE Crash course
 						<br/><br/>
 						<div class="smaller">
 						Elena Spadini
 						<br/>
-						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/index.html</a></div>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html</a></div>
 					</div>
 					<br/>
 					<img style="border:0px;box-shadow: none;" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
