--- a/talks/20220401_editions_crashCourse/teiIntro.html
+++ b/talks/20220401_editions_crashCourse/teiIntro.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>RISE editions</title>
+		<title>Intro TEI</title>
 
 		<link rel="stylesheet" href="../reveal/css/reveal.css">
 		<link rel="stylesheet" href="../reveal/css/theme/white.css">
@@ -52,6 +52,19 @@
 		<div class="reveal">
 			<div class="slides">
 
+				<section>
+					<h3><b>Introduction to TEI</b></h3>
+					<div class="small" style="text-align: left">
+						<br/>1.04.2022, RISE Crash course
+						<br/><br/>
+						<div class="smaller">
+						Elena Spadini
+						<br/>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html</a></div>
+					</div>
+					<br/>
+					<img style="border:0px;box-shadow: none;" width="30%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
+				</section>
 
 
 		
