--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -6,11 +6,12 @@
 
 		<title>RISE editions</title>
 
-		<link rel="stylesheet" href="../reveal/css/reveal.css">
-		<link rel="stylesheet" href="../reveal/css/theme/white.css">
+		<link rel="stylesheet" href="../reveal/dist/reset.css">
+		<link rel="stylesheet" href="../reveal/dist/reveal.css">
+		<link rel="stylesheet" href="../reveal/dist/theme/white.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../reveal/plugin/highlight/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -21,15 +22,7 @@
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
 
-		<script>
-			Reveal.initialize({
-					// More info https://github.com/hakimel/reveal.js#dependencies
-					dependencies: [
-						{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					]
-				});
-		</script>
-
+		
 		<style>
 			div.quote {font-size: 0.7em; margin-bottom: 1.5em; margin-top:1.5em;}
 			div.quote::before {content: "“";}
@@ -51,6 +44,7 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+
 
 
 <!-- ==================================================================================================  -->
@@ -930,37 +924,28 @@ FAIR--></div>
 					</div>
 				</section>
 
+			</div>
+		</div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<script src="../reveal/lib/js/head.min.js"></script>
-		<script src="../reveal/js/reveal.js"></script>
-
+				<script src="../reveal/dist/reveal.js"></script>
+		<script src="../reveal/plugin/notes/notes.js"></script>
+		<script src="../reveal/plugin/markdown/markdown.js"></script>
+		<script src="../reveal/plugin/highlight/highlight.js"></script>
 		<script>
-			// More info https://github.com/hakimel/reveal.js#configuration
+			// More info about initialization & config:
+			// - https://revealjs.com/initialization/
+			// - https://revealjs.com/config/
 			Reveal.initialize({
-				history: true,
+				hash: true,
 
-				// More info https://github.com/hakimel/reveal.js#dependencies
-				dependencies: [
-					{ src: '../reveal/plugin/markdown/marked.js' },
-					{ src: '../reveal/plugin/markdown/markdown.js' },
-					{ src: '../reveal/plugin/notes/notes.js', async: true },
-					{ src: '../reveal/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
+				// Learn about plugins: https://revealjs.com/plugins/
+				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
 			});
 		</script>
+
+
+
+
+
 	</body>
 </html>
