--- a/talks/20220401_editions_crashCourse/teiIntro.html
+++ b/talks/20220401_editions_crashCourse/teiIntro.html
@@ -47,15 +47,12 @@
 
 				<section>
 					<h2><b>Introduction to TEI</b></h2>
-					<div class="small" style="text-align: left;background-color: #a5d7d2;padding:50px;margin:50px">
+					<div class="smaller" style="text-align: left;background-color: #a5d7d2;padding:50px;margin:50px">
 						1.04.2022, RISE Crash course
 						<br/><br/>
-						<div class="smaller">
-							Elena Spadini
-							<br/>
-							Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html</a>
-							
-						</div>
+						Elena Spadini
+						<br/>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html</a>
 					</div>
 					<div>
 						<img style="border:0px;box-shadow: none;" width="20%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
