--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -67,7 +67,7 @@
 						<br/><br/>
 						Elena Spadini
 						<br/>
-						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.html</a>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.pdf</a>
 					</div>
 					<img style="border:0px;box-shadow: none;" width="20%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
 				</section>
