--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -64,10 +64,11 @@
 					<h3><b>Introduction to<br/>Digital Scholarly Editions</b></h3>
 					<div class="smaller" style="text-align: left;background-color: #a5d7d2;padding:50px;margin:50px">
 						1.04.2022, RISE Crash course
-						<br/><br/>
-						Elena Spadini
 						<br/>
-						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.pdf</a>
+						Elena Spadini
+						<!--
+						<br/>
+						Presentation online at: <a href="https://elespdn.github.io/talks/20220401_editions_crashCourse/teiIntro.html">https://elespdn.github.io/talks/20220401_editions_crashCourse/editions.pdf</a>-->
 					</div>
 					<img style="border:0px;box-shadow: none;" width="20%" src="images/UniBas_Logo_EN_Schwarz_RGB_65.jpg"/>
 				</section>
