fix reveal links

--- a/talks/20220401_editions_crashCourse/editions.html
+++ b/talks/20220401_editions_crashCourse/editions.html
@@ -2,25 +2,33 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>RISE editions</title>
 
-		<link rel="stylesheet" href="../reveal/dist/reset.css">
-		<link rel="stylesheet" href="../reveal/dist/reveal.css">
-		<link rel="stylesheet" href="../reveal/dist/theme/white.css">
+		<meta name="description" content="Introduction to digital scholarly editions">
+		<meta name="author" content="Elena Spadini">
+
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+		<link rel="stylesheet" href="../reveal/css/reset.css">
+		<link rel="stylesheet" href="../reveal/css/reveal.css">
+		<link rel="stylesheet" href="../reveal/css/theme/white.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="../reveal/plugin/highlight/zenburn.css">
+		<link rel="stylesheet" href="../reveal/lib/css/zenburn.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
 			link.rel = 'stylesheet';
 			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? '../reveal/css/print/pdf.css' : '../reveal/css/print/paper.css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+
 
 		
 		<style>
@@ -882,21 +890,36 @@ FAIR--></div>
 			</div>
 		</div>
 
-		<script src="../reveal/dist/reveal.js"></script>
-		<script src="../reveal/plugin/notes/notes.js"></script>
-		<script src="../reveal/plugin/markdown/markdown.js"></script>
-		<script src="../reveal/plugin/highlight/highlight.js"></script>
+
+		<script src="../reveal/js/reveal.js"></script>
+
 		<script>
-			// More info about initialization & config:
-			// - https://revealjs.com/initialization/
-			// - https://revealjs.com/config/
+
+			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
+				controls: true,
+				progress: true,
+				center: true,
 				hash: true,
 
-				// Learn about plugins: https://revealjs.com/plugins/
-				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
+				transition: 'slide', // none/fade/slide/convex/concave/zoom
+
+				// More info https://github.com/hakimel/reveal.js#dependencies
+				dependencies: [
+					{ src: '../reveal/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../reveal/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '../reveal/plugin/highlight/highlight.js', async: true },
+					{ src: '../reveal/plugin/search/search.js', async: true },
+					{ src: '../reveal/plugin/zoom-js/zoom.js', async: true },
+					{ src: '../reveal/plugin/notes/notes.js', async: true }
+				]
 			});
+
 		</script>
+
+
+
+
 
 
 
